GopherParser.py
# Generated from Gopher.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


class GopherParser ( Parser ):

    grammarFileName = "Gopher.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'key'", "'='", "'impl'", "','", 
                     "'|'", "'=>'", "'?'", "'\t'", "'['", "']'", "'l['", 
                     "<INVALID>", "':'", "'print'", "'outs'", "'incl'", 
                     "'load'", "'extcall'", "'println'", "<INVALID>", "'function'", 
                     "'ret'", "'label'", "'type'", "'under'", "'goto'", 
                     "'var'", "'if'", "'else'", "'elsif'", "'until'", "'while'", 
                     "'for'", "'match'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'true'", "'false'", "'null'", "'::'", "'or'", "'and'", 
                     "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'**'", 
                     "'+'", "'-'", "'*'", "'/'", "<INVALID>", "'not'", "'->'", 
                     "'is'", "'('", "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "DT", "COL", "PRINT", "OUTS", "INCLUDE", 
                      "LOAD", "EXTCALL", "PRINTLN", "INPUT", "FUNCTION", 
                      "RET", "LABEL", "CLASS", "UNDER", "GOTO", "VAR", "IF", 
                      "ELSE", "ELSIF", "UNTIL", "WHILE", "FOR", "MATCH", 
                      "BOOL", "DECIMAL", "EXPDECIMAL", "TRUE", "FALSE", 
                      "NULL", "REF_OP", "OR", "AND", "EQ", "NEQ", "GT", 
                      "LT", "GTEQ", "LTEQ", "POW", "PLUS", "MINUS", "MULT", 
                      "DIV", "MOD", "NOT", "ASSIGN", "CONSTASSIGN", "OPAR", 
                      "CPAR", "OBRACE", "CBRACE", "STRING", "ID", "COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_block = 1
    RULE_stmt = 2
    RULE_key = 3
    RULE_var = 4
    RULE_decl = 5
    RULE_print_stmt = 6
    RULE_label_def = 7
    RULE_goto_stmt = 8
    RULE_class_stmt = 9
    RULE_impl_stmt = 10
    RULE_class_inst = 11
    RULE_def_func_stmt = 12
    RULE_def_func_expr = 13
    RULE_id_call = 14
    RULE_ext_call = 15
    RULE_recID = 16
    RULE_value = 17
    RULE_expr = 18
    RULE_incl_stmt = 19
    RULE_load_stmt = 20
    RULE_for_stmt = 21
    RULE_match_stmt = 22
    RULE_until_stmt = 23
    RULE_while_stmt = 24
    RULE_if_stmt = 25
    RULE_condition_block = 26
    RULE_stmt_block = 27
    RULE_return_stmt = 28
    RULE_list_var = 29
    RULE_linspace = 30

    ruleNames =  [ "program", "block", "stmt", "key", "var", "decl", "print_stmt", 
                   "label_def", "goto_stmt", "class_stmt", "impl_stmt", 
                   "class_inst", "def_func_stmt", "def_func_expr", "id_call", 
                   "ext_call", "recID", "value", "expr", "incl_stmt", "load_stmt", 
                   "for_stmt", "match_stmt", "until_stmt", "while_stmt", 
                   "if_stmt", "condition_block", "stmt_block", "return_stmt", 
                   "list_var", "linspace" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    DT=13
    COL=14
    PRINT=15
    OUTS=16
    INCLUDE=17
    LOAD=18
    EXTCALL=19
    PRINTLN=20
    INPUT=21
    FUNCTION=22
    RET=23
    LABEL=24
    CLASS=25
    UNDER=26
    GOTO=27
    VAR=28
    IF=29
    ELSE=30
    ELSIF=31
    UNTIL=32
    WHILE=33
    FOR=34
    MATCH=35
    BOOL=36
    DECIMAL=37
    EXPDECIMAL=38
    TRUE=39
    FALSE=40
    NULL=41
    REF_OP=42
    OR=43
    AND=44
    EQ=45
    NEQ=46
    GT=47
    LT=48
    GTEQ=49
    LTEQ=50
    POW=51
    PLUS=52
    MINUS=53
    MULT=54
    DIV=55
    MOD=56
    NOT=57
    ASSIGN=58
    CONSTASSIGN=59
    OPAR=60
    CPAR=61
    OBRACE=62
    CBRACE=63
    STRING=64
    ID=65
    COMMENT=66
    WS=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(GopherParser.BlockContext,0)


        def EOF(self):
            return self.getToken(GopherParser.EOF, 0)

        def getRuleIndex(self):
            return GopherParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = GopherParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.block()
            self.state = 63
            self.match(GopherParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GopherParser.StmtContext)
            else:
                return self.getTypedRuleContext(GopherParser.StmtContext,i)


        def getRuleIndex(self):
            return GopherParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = GopherParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 2)) & ~0x3f) == 0 and ((1 << (_la - 2)) & ((1 << (GopherParser.T__1 - 2)) | (1 << (GopherParser.T__3 - 2)) | (1 << (GopherParser.T__5 - 2)) | (1 << (GopherParser.T__9 - 2)) | (1 << (GopherParser.T__11 - 2)) | (1 << (GopherParser.PRINT - 2)) | (1 << (GopherParser.OUTS - 2)) | (1 << (GopherParser.INCLUDE - 2)) | (1 << (GopherParser.LOAD - 2)) | (1 << (GopherParser.EXTCALL - 2)) | (1 << (GopherParser.PRINTLN - 2)) | (1 << (GopherParser.INPUT - 2)) | (1 << (GopherParser.FUNCTION - 2)) | (1 << (GopherParser.RET - 2)) | (1 << (GopherParser.LABEL - 2)) | (1 << (GopherParser.CLASS - 2)) | (1 << (GopherParser.GOTO - 2)) | (1 << (GopherParser.VAR - 2)) | (1 << (GopherParser.IF - 2)) | (1 << (GopherParser.UNTIL - 2)) | (1 << (GopherParser.WHILE - 2)) | (1 << (GopherParser.FOR - 2)) | (1 << (GopherParser.MATCH - 2)) | (1 << (GopherParser.BOOL - 2)) | (1 << (GopherParser.DECIMAL - 2)) | (1 << (GopherParser.EXPDECIMAL - 2)) | (1 << (GopherParser.NULL - 2)) | (1 << (GopherParser.MINUS - 2)) | (1 << (GopherParser.NOT - 2)) | (1 << (GopherParser.OPAR - 2)) | (1 << (GopherParser.STRING - 2)) | (1 << (GopherParser.ID - 2)))) != 0):
                self.state = 65
                self.stmt()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def incl_stmt(self):
            return self.getTypedRuleContext(GopherParser.Incl_stmtContext,0)


        def load_stmt(self):
            return self.getTypedRuleContext(GopherParser.Load_stmtContext,0)


        def var(self):
            return self.getTypedRuleContext(GopherParser.VarContext,0)


        def decl(self):
            return self.getTypedRuleContext(GopherParser.DeclContext,0)


        def class_stmt(self):
            return self.getTypedRuleContext(GopherParser.Class_stmtContext,0)


        def impl_stmt(self):
            return self.getTypedRuleContext(GopherParser.Impl_stmtContext,0)


        def print_stmt(self):
            return self.getTypedRuleContext(GopherParser.Print_stmtContext,0)


        def key(self):
            return self.getTypedRuleContext(GopherParser.KeyContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(GopherParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(GopherParser.While_stmtContext,0)


        def until_stmt(self):
            return self.getTypedRuleContext(GopherParser.Until_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(GopherParser.For_stmtContext,0)


        def match_stmt(self):
            return self.getTypedRuleContext(GopherParser.Match_stmtContext,0)


        def label_def(self):
            return self.getTypedRuleContext(GopherParser.Label_defContext,0)


        def def_func_stmt(self):
            return self.getTypedRuleContext(GopherParser.Def_func_stmtContext,0)


        def id_call(self):
            return self.getTypedRuleContext(GopherParser.Id_callContext,0)


        def ext_call(self):
            return self.getTypedRuleContext(GopherParser.Ext_callContext,0)


        def goto_stmt(self):
            return self.getTypedRuleContext(GopherParser.Goto_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(GopherParser.Return_stmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(GopherParser.ExprContext,0)


        def getRuleIndex(self):
            return GopherParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = GopherParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.incl_stmt()
                self.state = 72
                self.match(GopherParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.load_stmt()
                self.state = 75
                self.match(GopherParser.T__0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.var()
                self.state = 78
                self.match(GopherParser.T__0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.decl()
                self.state = 81
                self.match(GopherParser.T__0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.class_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.impl_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 85
                self.print_stmt()
                self.state = 86
                self.match(GopherParser.T__0)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 88
                self.key()
                self.state = 89
                self.match(GopherParser.T__0)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 91
                self.if_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 92
                self.while_stmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 93
                self.until_stmt()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 94
                self.for_stmt()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 95
                self.match_stmt()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 96
                self.label_def()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 97
                self.def_func_stmt()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 98
                self.id_call()
                self.state = 99
                self.match(GopherParser.T__0)
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 101
                self.ext_call()
                self.state = 102
                self.match(GopherParser.T__0)
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 104
                self.goto_stmt()
                self.state = 105
                self.match(GopherParser.T__0)
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 107
                self.return_stmt()
                self.state = 108
                self.match(GopherParser.T__0)
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 110
                self.expr(0)
                self.state = 111
                self.match(GopherParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class KeyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GopherParser.RULE_key

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKey" ):
                listener.enterKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKey" ):
                listener.exitKey(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKey" ):
                return visitor.visitKey(self)
            else:
                return visitor.visitChildren(self)




    def key(self):

        localctx = GopherParser.KeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_key)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(GopherParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(GopherParser.VAR, 0)

        def ID(self):
            return self.getToken(GopherParser.ID, 0)

        def CONSTASSIGN(self):
            return self.getToken(GopherParser.CONSTASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(GopherParser.ExprContext,0)


        def DT(self):
            return self.getToken(GopherParser.DT, 0)

        def ASSIGN(self):
            return self.getToken(GopherParser.ASSIGN, 0)

        def getRuleIndex(self):
            return GopherParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = GopherParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(GopherParser.VAR)
                self.state = 118
                self.match(GopherParser.ID)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GopherParser.COL:
                    self.state = 119
                    self.match(GopherParser.COL)
                    self.state = 120
                    self.match(GopherParser.DT)


                self.state = 123
                self.match(GopherParser.CONSTASSIGN)
                self.state = 124
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(GopherParser.ID)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GopherParser.COL:
                    self.state = 126
                    self.match(GopherParser.COL)
                    self.state = 127
                    self.match(GopherParser.DT)


                self.state = 130
                self.match(GopherParser.T__2)
                self.state = 131
                self.expr(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 132
                self.expr(0)
                self.state = 133
                self.match(GopherParser.ASSIGN)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GopherParser.DT:
                    self.state = 134
                    self.match(GopherParser.DT)
                    self.state = 135
                    self.match(GopherParser.COL)


                self.state = 138
                self.match(GopherParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def recID(self):
            return self.getTypedRuleContext(GopherParser.RecIDContext,0)


        def expr(self):
            return self.getTypedRuleContext(GopherParser.ExprContext,0)


        def getRuleIndex(self):
            return GopherParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = GopherParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.recID()
            self.state = 143
            self.match(GopherParser.T__2)
            self.state = 144
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Print_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GopherParser.RULE_print_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintlnContext(Print_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GopherParser.Print_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINTLN(self):
            return self.getToken(GopherParser.PRINTLN, 0)
        def expr(self):
            return self.getTypedRuleContext(GopherParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintln" ):
                listener.enterPrintln(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintln" ):
                listener.exitPrintln(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintln" ):
                return visitor.visitPrintln(self)
            else:
                return visitor.visitChildren(self)


    class FileoutsContext(Print_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GopherParser.Print_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OUTS(self):
            return self.getToken(GopherParser.OUTS, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GopherParser.ExprContext)
            else:
                return self.getTypedRuleContext(GopherParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFileouts" ):
                listener.enterFileouts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFileouts" ):
                listener.exitFileouts(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFileouts" ):
                return visitor.visitFileouts(self)
            else:
                return visitor.visitChildren(self)


    class Print0Context(Print_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GopherParser.Print_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINT(self):
            return self.getToken(GopherParser.PRINT, 0)
        def expr(self):
            return self.getTypedRuleContext(GopherParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint0" ):
                listener.enterPrint0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint0" ):
                listener.exitPrint0(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint0" ):
                return visitor.visitPrint0(self)
            else:
                return visitor.visitChildren(self)



    def print_stmt(self):

        localctx = GopherParser.Print_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_print_stmt)
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GopherParser.PRINT]:
                localctx = GopherParser.Print0Context(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(GopherParser.PRINT)
                self.state = 147
                self.expr(0)
                pass
            elif token in [GopherParser.PRINTLN]:
                localctx = GopherParser.PrintlnContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(GopherParser.PRINTLN)
                self.state = 149
                self.expr(0)
                pass
            elif token in [GopherParser.OUTS]:
                localctx = GopherParser.FileoutsContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 150
                self.match(GopherParser.OUTS)
                self.state = 151
                self.expr(0)
                self.state = 152
                self.expr(0)
                self.state = 153
                self.expr(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Label_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self):
            return self.getToken(GopherParser.LABEL, 0)

        def ID(self):
            return self.getToken(GopherParser.ID, 0)

        def stmt_block(self):
            return self.getTypedRuleContext(GopherParser.Stmt_blockContext,0)


        def getRuleIndex(self):
            return GopherParser.RULE_label_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel_def" ):
                listener.enterLabel_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel_def" ):
                listener.exitLabel_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel_def" ):
                return visitor.visitLabel_def(self)
            else:
                return visitor.visitChildren(self)




    def label_def(self):

        localctx = GopherParser.Label_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_label_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(GopherParser.LABEL)
            self.state = 158
            self.match(GopherParser.ID)
            self.state = 159
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Goto_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GOTO(self):
            return self.getToken(GopherParser.GOTO, 0)

        def ID(self):
            return self.getToken(GopherParser.ID, 0)

        def getRuleIndex(self):
            return GopherParser.RULE_goto_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGoto_stmt" ):
                listener.enterGoto_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGoto_stmt" ):
                listener.exitGoto_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGoto_stmt" ):
                return visitor.visitGoto_stmt(self)
            else:
                return visitor.visitChildren(self)




    def goto_stmt(self):

        localctx = GopherParser.Goto_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_goto_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(GopherParser.GOTO)
            self.state = 162
            self.match(GopherParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Class_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.EID = None # Token

        def CLASS(self):
            return self.getToken(GopherParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(GopherParser.ID)
            else:
                return self.getToken(GopherParser.ID, i)

        def OBRACE(self):
            return self.getToken(GopherParser.OBRACE, 0)

        def CBRACE(self):
            return self.getToken(GopherParser.CBRACE, 0)

        def UNDER(self):
            return self.getToken(GopherParser.UNDER, 0)

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GopherParser.VarContext)
            else:
